# computer-science-studies

./: README.md
banco-de-dados/: README.md
banco-de-dados-nosql/: README.md
banco-de-dados/exercicios/api-postgres/: README.md
calculo-diferencial-integral-1/: README.md
desenvolvimento-mobile/: README.md
desenvolvimento-mobile/exercicios/jogo-da-sorte/: .gitignore  CMakeLists.txt  README.md
desenvolvimento-mobile/exercicios/jogo-da-sorte/BaralhoPilha/: Makefile
desenvolvimento-mobile/exercicios/jogo-da-sorte/BaralhoPilha/include/: carta.h  pilha.h  utils.h
desenvolvimento-mobile/exercicios/jogo-da-sorte/BaralhoPilha/src/: carta.c  main.c  pilha.c  utils.c
desenvolvimento-mobile/exercicios/jogo-da-sorte/web/: index.html  script.js  style.css
desenvolvimento-mobile/projetos/app-android-filmes/: README.md  build.gradle.kts  crash_log.txt  erros_completos.txt  settings.gradle.kts
estagio-supervisionado/: README.md
estrutura-de-dados/: README.md
estrutura-de-dados/listas/: README.md
pratica-extensionista/: README.md
pratica-extensionista/aulas/: README.md
programacao-frontend-devops/: README.md
programacao-orientada-a-objetos/: README.md
programacao-orientada-a-objetos/projetos/sistema-editoras/: README.md
programacao-typescript/: README.md
programacao-typescript/projetos/quiz-app/: README.md  docker-compose.yml  package-lock.json  package.json
prova-integrativa/: README.md
prova-integrativa/listas/lista-01/: README.md
seguranca-de-sistemas/: README.md
topicos-de-sistemas-de-informacao/: README.md
(+86 files in other folders)
